<resources>
    <string name="app_name">Music Player</string>
    <string name="str_albums">Albums</string>
    <string name="str_songs">Songs</string>
    <string name="str_now_playing">Now playing</string>
    <string name="album_item_image_desc">Album Cover</string>
    <string name="album_item_end_image_desc">Arrow</string>
    <string name="albums_songs">Album\'s Songs</string>
    <string name="str_author">Author</string>
    <string name="str_title">Title</string>
    <string name="str_duration">Duration</string>
    <string name="str_auth_acdc">AC/DC</string>
    <string name="str_acdc_rocknroll">Rock \'n\' Roll Damnation</string>
    <string name="str_acdc_gimme">Gimme a Bullet</string>
    <string name="str_acdc_down">Down Payment Blues</string>
    <string name="str_acdc_gone_shootin">Gone Shootin\'</string>
    <string name="str_acdc_riff_raff">Riff Raff</string>
    <string name="str_acdc_sin_city">Sin City</string>
    <string name="str_acdc_up_to_my_neck">Up to My Neck in You</string>
    <string name="str_acdc_whats_next">What\'s Next to the Moon</string>
    <string name="str_acdc_cold_hearted_man">Cold Hearted Man</string>
    <string name="str_acdc_kicked">Kicked in the Teeth</string>
    <string name="str_acdc_dur01">3:06</string>
    <string name="str_acdc_dur02">3:20</string>
    <string name="str_acdc_dur03">5:40</string>
    <string name="str_acdc_dur04">5:22</string>
    <string name="str_acdc_dur05">5:14</string>
    <string name="str_acdc_dur06">4:45</string>
    <string name="str_acdc_dur07">4:12</string>
    <string name="str_acdc_dur08">3:42</string>
    <string name="str_acdc_dur09">3:32</string>
    <string name="str_acdc_dur10">3:58</string>
    <string name="str_auth_faith_no_more">Faith No More</string>
    <string name="str_fnm_get_out">Get Out</string>
    <string name="str_fnm_ricochet">Ricochet</string>
    <string name="str_fnm_evidence">Evidence</string>
    <string name="str_fnm_the_gentle_art">The Gentle Art of Making Enemies</string>
    <string name="str_fnm_star">Star A.D.</string>
    <string name="cuckoo">Cuckoo for Caca</string>
    <string name="str_fnm_caralho">Caralho Voador</string>
    <string name="str_fnm_ugly_in_the_morning">Ugly in the Morning</string>
    <string name="str_fnm_digging_the_grave">Digging the Grave</string>
    <string name="str_fnm_take_this_bottle">Take This Bottle</string>
    <string name="str_fnm_king_for_a_day">King for a Day</string>
    <string name="str_fnm_what_a_day">What a Day</string>
    <string name="str_fnm_the_last_to_know">The Last to Know</string>
    <string name="str_fnm_just_a_man">Just a Man</string>
    <string name="str_fnm_dur01">2:17</string>
    <string name="str_fnm_dur02">4:28</string>
    <string name="str_fnm_dur03">4:53</string>
    <string name="str_fnm_dur04">3:28</string>
    <string name="str_fnm_dur05">3:22</string>
    <string name="str_fnm_dur06">3:41</string>
    <string name="str_fnm_dur07">4:01</string>
    <string name="str_fnm_dur08">3:06</string>
    <string name="str_fnm_dur09">3:04</string>
    <string name="str_fnm_dur10">4:59</string>
    <string name="str_fnm_dur11">6:35</string>
    <string name="str_fnm_dur12">2:37</string>
    <string name="str_fnm_dur13">4:27</string>
    <string name="str_fnm_dur14">5:35</string>
    <string name="str_auth_manowar">Manowar</string>
    <string name="str_mnw_wheels_of_fire">Wheels Of Fire</string>
    <string name="str_mnw_kings_of_metal">Kings Of Metal</string>
    <string name="str_mnw_hearts_of_steel">Heart Of Steel</string>
    <string name="str_mnw_sting">Sting Of The Bumblebee</string>
    <string name="str_mnw_the_crown">The Crown And The Ring (Lament Of The Kings)</string>
    <string name="str_mnw_kingdom_come">Kingdom Come</string>
    <string name="str_mnw_pleasure">Pleasure Slave</string>
    <string name="str_mnw_hail_and_kill">Hail And Kill</string>
    <string name="str_mnw_warriors_prayer">The Warriors Prayer</string>
    <string name="str_mnw_blood_of_the_kings">Blood Of The Kings</string>
    <string name="str_mnw_dur01">4:11</string>
    <string name="str_mnw_dur02">3:43</string>
    <string name="str_mnw_dur03">5:10</string>
    <string name="str_mnw_dur04">2:45</string>
    <string name="str_mnw_dur05">4:46</string>
    <string name="str_mnw_dur06">3:55</string>
    <string name="str_mnw_dur07">5:37</string>
    <string name="str_mnw_dur08">5:54</string>
    <string name="str_mnw_dur09">4:20</string>
    <string name="str_mnw_dur10">7:30</string>
    <string name="str_auth_qr">Quiet Riot</string>
    <string name="str_qr_metal_health">Metal Health (Bang Your Head)</string>
    <string name="str_qr_cum_on">Cum On Feel the Noize (Slade cover)</string>
    <string name="dont_wanna">Don\'t Wanna Let You Go</string>
    <string name="str_qr_cadillac">Slick Black Cadillac</string>
    <string name="str_qr_loves_a_bitch">Love\'s a Bitch</string>
    <string name="str_qr_breathless">Breathless</string>
    <string name="str_qr_run_for_cover">Run for Cover</string>
    <string name="str_qr_battle_axe">Battle Axe</string>
    <string name="str_qr_lets_get_crazy">Let\'s Get Crazy</string>
    <string name="str_qr_thunderbird">Thunderbird</string>
    <string name="str_qr_dur01">5:16</string>
    <string name="str_qr_dur02">4:51</string>
    <string name="str_qr_dur03">4:42</string>
    <string name="str_qr_dur04">4:12</string>
    <string name="str_qr_dur05">4:11</string>
    <string name="str_qr_dur06">3:51</string>
    <string name="str_qr_dur07">3:38</string>
    <string name="str_qr_dur08">1:38</string>
    <string name="str_qr_dur09">4:08</string>
    <string name="str_qr_dur10">4:43</string>
    <string name="str_acdc_albumtitle1">Powerage</string>
    <string name="str_fnm_albumtitle1">King For A Day, Fool For A Lifetime</string>
    <string name="str_manowar_albumtitle1">Kings of Metal</string>
    <string name="str_qr_albumtitle1">Metal Health</string>
</resources>
