<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/items_padding"
    tools:context="com.example.android.abndp4musicalstructure.MainActivity">

    <ImageView
        android:id="@+id/album_item_image"
        android:layout_width="@dimen/album_cover_width"
        android:layout_height="@dimen/album_cover_height"
        android:contentDescription="@string/album_item_image_desc" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/album_author"
            style="@style/album_style"
            android:textStyle="normal"
            tools:text="@string/str_author" />

        <TextView
            android:id="@+id/album_title"
            style="@style/album_style"
            android:textStyle="bold"
            tools:text="@string/str_title" />

    </LinearLayout>

    <ImageView
        android:id="@+id/album_item_end"
        android:layout_width="@dimen/album_cover_width"
        android:layout_height="@dimen/album_cover_height"
        android:contentDescription="@string/album_item_end_image_desc" />

</LinearLayout>
