<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/items_padding"
    tools:context="com.example.android.abndp4musicalstructure.MainActivity">

    <ImageView
        android:id="@+id/song_playicon"
        android:layout_width="@dimen/song_playicon_width"
        android:layout_height="@dimen/song_playicon_height"
        android:contentDescription="@string/album_item_image_desc" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/song_author"
            style="@style/song_style"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            tools:text="@string/str_author" />

        <TextView
            android:id="@+id/song_title"
            style="@style/song_style"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            tools:text="@string/str_title" />

    </LinearLayout>

    <TextView
        android:id="@+id/song_duration"
        style="@style/song_style"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textStyle="bold"
        tools:text="@string/str_duration" />

</LinearLayout>
